--- a/index.html
+++ b/index.html
@@ -1013,7 +1013,7 @@
                 <p class="mb-md-0 text-center text-md-left text-secondary">
                     &copy; <a class="text-primary" href="#">Domain</a>. All Rights Reserved. Designed
                     by
-                    <a class="text-primary" href="#">MultiShop</a>
+                    <a class="text-primary" href="#">Asiful Islam</a>
                 </p>
             </div>
             <div class="col-md-6 px-xl-0 text-center text-md-right">
